fixed alignment issue in static pages

--- a/src/app/routes/public/contentpolicyandcommunication/contentpolicyandcommunication.component.scss
+++ b/src/app/routes/public/contentpolicyandcommunication/contentpolicyandcommunication.component.scss
@@ -117,6 +117,7 @@ line-height: 33px !important;
     float: unset !important;
     // margin-left: 2rem !important;
      height: auto !important;
+     margin-bottom: 30px;
   }
 //   @include breakpoint-s {
 // width: 17rem !important;
