--- a/src/app/routes/public/termsofuse/termsofuse.component.scss
+++ b/src/app/routes/public/termsofuse/termsofuse.component.scss
@@ -95,6 +95,7 @@ color: #925EB0 !important;;
 .exception-style {
   @include breakpoint-xs {
     text-align: center;
+    margin-bottom: 30px;
   }
 }
 .header {
@@ -132,6 +133,7 @@ color: #925EB0;
     float: unset !important;
     // margin-left: 4rem !important;
      height: auto !important;
+     margin-bottom: 30px !important;
   }
 //   @include breakpoint-s {
 // width: 17rem !important;
